feature extractor change

--- a/web/styles.css
+++ b/web/styles.css
@@ -88,3 +88,9 @@ button:disabled:hover {
   text-align: center;
   padding: 10px;
 }
+
+#predictedLabelContainer {
+  position: relative;
+  color: white;
+  font-size: 30px;
+}
